--- a/style.css
+++ b/style.css
@@ -3,4 +3,15 @@
     color: white;
     background-color: black ;
     width: 100%;
+    padding: 50px;
+}
+.h2{
+font-size: large;
+}
+.label{
+    font-size: large;   
+}
+.button{
+   
+    color: white;
 }
